Source/WebCore/platform/graphics/efl/GraphicsContext3DEfl.cpp
@@ -231,9 +231,9 @@ void GraphicsContext3D::paintToCanvas(const unsigned char* imagePixels, int imag
 }
 
 #if USE(GRAPHICS_SURFACE)
-void GraphicsContext3D::createGraphicsSurfaces(const IntSize&)
+void GraphicsContext3D::createGraphicsSurfaces(const IntSize& size)
 {
-    m_private->didResizeCanvas();
+    m_private->didResizeCanvas(size);
 }
 #endif
 
